[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/scene_manager/source/Scene.gd" type="Script" id=1]
[ext_resource path="res://addons/scene_manager/source/SceneLoader.gd" type="Script" id=2]
[ext_resource path="res://addons/scene_manager/graphics/white.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Scene" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="SceneLoader" type="Node" parent="."]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="TextureProgress" type="TextureProgress" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -12.0
value = 50.0
rounded = true
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 1
stretch_margin_top = 1
stretch_margin_right = 1
stretch_margin_bottom = 1
[connection signal="scene_loaded" from="SceneLoader" to="." method="_on_SceneLoader_scene_loaded"]
[connection signal="stage_changed" from="SceneLoader" to="." method="_on_SceneLoader_stage_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="value_changed" from="TextureProgress" to="." method="_on_ProgressBar_value_changed"]
